--- a/beta/index.html
+++ b/beta/index.html
@@ -16,9 +16,13 @@
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
+                        <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
+
                         <li><a href='diff_mixin.html'>Unified diff core:dev vs beta:origin/mixin</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
+
+                        <li><a href='diff_renovate/asottile-pyupgrade-3.x.html'>Unified diff core:dev vs beta:origin/renovate/asottile-pyupgrade-3.x</a></li>
 
                         <li><a href='diff_tryout.html'>Unified diff core:dev vs beta:origin/tryout</a></li>
 
