--- a/beta/index.html
+++ b/beta/index.html
@@ -24,6 +24,8 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_renovate/pre-commit-mirrors-prettier-3.x.html'>Unified diff core:dev vs beta:origin/renovate/pre-commit-mirrors-prettier-3.x</a></li>
+
                         <li><a href='diff_tryout.html'>Unified diff core:dev vs beta:origin/tryout</a></li>
 
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
