--- a/beta/index.html
+++ b/beta/index.html
@@ -22,6 +22,8 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_renovate/psf-black-23.x.html'>Unified diff core:dev vs beta:origin/renovate/psf-black-23.x</a></li>
+
                         <li><a href='diff_tryout.html'>Unified diff core:dev vs beta:origin/tryout</a></li>
 
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
