--- a/beta/index.html
+++ b/beta/index.html
@@ -20,9 +20,9 @@
 
                         <li><a href='diff_mixin.html'>Unified diff core:dev vs beta:origin/mixin</a></li>
 
-                        <li><a href='diff_pre-commit-ci-update-config.html'>Unified diff core:dev vs beta:origin/pre-commit-ci-update-config</a></li>
-
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
+
+                        <li><a href='diff_pw_31_7.html'>Unified diff core:dev vs beta:origin/pw_31_7</a></li>
 
                         <li><a href='diff_tryout.html'>Unified diff core:dev vs beta:origin/tryout</a></li>
 
